--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ perl:
 
 before_install:
     - sudo apt-get update -q
+    - sudo apt-get install libpcap0.8
+    - sudo apt-get install libpcap-dev
 
 install:
     - dzil authordeps | cpanm -n
